plugin now takes advantage of hibernate second level cache, and I optimized a few queries

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,8 @@
 #utf-8
-#Tue Mar 10 15:48:37 CDT 2009
+#Mon Mar 23 11:34:13 GMT 2009
+app.version=0.1
 plugins.yui=2.6.1
-app.grails.version=1.1-SNAPSHOT
-plugins.hibernate=1.1-RC2
+app.servlet.version=2.4
+app.grails.version=1.1
+plugins.hibernate=1.1
 app.name=rateable
