--- a/plugin.xml
+++ b/plugin.xml
@@ -1,4 +1,4 @@
-<plugin name='rateable' version='0.2' grailsVersion='1.1 &gt; *'>
+<plugin name='rateable' version='0.3' grailsVersion='1.1 &gt; *'>
   <author>Matthew Taylor</author>
   <authorEmail>matt.taylor@springsource.com</authorEmail>
   <title>Rateable Plugin</title>
@@ -7,6 +7,11 @@ A plugin that adds a generic mechanism for rating domain objects.
 </description>
   <documentation>http://grails.org/plugin/rateable</documentation>
   <resources>
+    <resource>BootStrap</resource>
+    <resource>Config</resource>
+    <resource>DataSource</resource>
+    <resource>spring.resources</resource>
+    <resource>UrlMappings</resource>
     <resource>org.grails.rateable.RateableController</resource>
     <resource>org.grails.rateable.Rating</resource>
     <resource>org.grails.rateable.RatingLink</resource>
