--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 #utf-8
-#Mon Mar 23 11:34:13 GMT 2009
-app.version=0.1
+#Tue Mar 24 05:46:05 CDT 2009
 plugins.yui=2.6.1
+app.version=0.1
 app.servlet.version=2.4
 app.grails.version=1.1
 plugins.hibernate=1.1
