--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,8 @@
 #utf-8
 #Tue Mar 24 06:50:54 CDT 2009
 app.version=0.1
-plugins.yui=2.6.1
+plugins.yui=2.7.0.1
 app.servlet.version=2.4
-app.grails.version=1.1
+app.grails.version=1.2-SNAPSHOT
 plugins.hibernate=1.1
 app.name=rateable
