--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 #Grails Metadata file
-#Mon Nov 16 11:38:05 CET 2009
+#Wed Jun 01 13:46:03 BST 2011
 app.grails.version=1.3.7
 app.name=rateable
+plugins.release=1.0.0.M2
