--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Wed Jun 01 13:46:03 BST 2011
-app.grails.version=1.3.7
+#Tue Jan 10 16:02:23 GMT 2012
+app.grails.version=2.0.0
 app.name=rateable
-plugins.release=1.0.0.M2
+plugins.svn=1.0.2
