--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath 'com.bertramlabs.plugins:asset-pipeline-gradle:2.1.1'
+        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.11.1"
     }
 }
 
@@ -17,7 +17,7 @@ plugins {
     id "com.jfrog.bintray" version "1.1"
 }
 
-version "2.0.0-SNAPSHOT"
+version "2.0.1-SNAPSHOT"
 group "org.grails.plugins"
 
 apply plugin: 'maven-publish'
@@ -59,14 +59,14 @@ dependencies {
     provided "org.springframework.boot:spring-boot-starter-tomcat"
 
     provided "org.grails:grails-web-boot"
-    provided "org.grails.plugins:hibernate"
+    provided "org.grails.plugins:hibernate5"
     provided "org.hibernate:hibernate-ehcache"
     provided "org.grails:grails-dependencies"
     provided 'javax.servlet:javax.servlet-api:3.1.0'
-
+    
     runtime "org.grails.plugins:asset-pipeline"
     testCompile "org.grails:grails-plugin-testing"
-
+    
     console "org.grails:grails-console"
 }
 
